OO-3719: add search by pending, change pending to active...
Add exact status search in user search, change the "special" status in
the tables...